# wrightty

./: .gitignore  Cargo.toml  PROTOCOL.md  README.md  install.sh
.github/workflows/: ci.yml  release.yml
agents/founding-engineer/: AGENTS.md
crates/wrightty/: Cargo.toml
crates/wrightty-bridge-ghostty/: Cargo.toml
crates/wrightty-bridge-ghostty/src/: ghostty.rs  lib.rs  main.rs  rpc.rs
crates/wrightty-bridge-kitty/: Cargo.toml
crates/wrightty-bridge-kitty/src/: kitty.rs  lib.rs  main.rs  rpc.rs
crates/wrightty-bridge-tmux/: Cargo.toml
crates/wrightty-bridge-tmux/src/: lib.rs  main.rs  rpc.rs  tmux.rs
crates/wrightty-bridge-wezterm/: Cargo.toml
crates/wrightty-bridge-wezterm/src/: lib.rs  main.rs  rpc.rs  wezterm.rs
crates/wrightty-bridge-zellij/: Cargo.toml
crates/wrightty-bridge-zellij/src/: lib.rs  main.rs  rpc.rs  zellij.rs
crates/wrightty-cli/: Cargo.toml
crates/wrightty-cli/src/: server.rs
crates/wrightty-client/: Cargo.toml
crates/wrightty-client/src/: client.rs  lib.rs  raw_ws.rs
crates/wrightty-core/: Cargo.toml
crates/wrightty-core/src/: input.rs  lib.rs  screen.rs  session.rs  session_manager.rs
crates/wrightty-protocol/: Cargo.toml
crates/wrightty-protocol/src/: error.rs  events.rs  lib.rs  methods.rs  types.rs
crates/wrightty-server/: Cargo.toml
crates/wrightty-server/src/: lib.rs  main.rs  rpc.rs  state.rs
crates/wrightty/src/: client_cmds.rs  discover.rs  main.rs  term.rs  version.rs
docs/: index.html
examples/: basic_command.py  interactive_tui.py  record_session.py
sdks/node/: package-lock.json  package.json  tsconfig.json
sdks/node/src/: cli.ts  client.ts  index.ts  terminal.ts  types.ts
sdks/python/: .gitignore  README.md  pyproject.toml
sdks/python/tests/: test_terminal.py
sdks/python/wrightty/: __init__.py  cli.py  client.py  mcp_server.py  terminal.py
skills/wrightty/: SKILL.md
src/: lib.rs
tests/: integration_test.rs
