[package]
name = "wrightty-bridge-kitty"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bridge that translates wrightty protocol calls into kitty remote control commands"

[[bin]]
name = "wrightty-bridge-kitty"
path = "src/main.rs"

[dependencies]
wrightty-protocol = { path = "../wrightty-protocol" }

jsonrpsee = { version = "0.24", features = ["server"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
