[package]
name = "wrightty-bridge-wezterm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Bridge that translates wrightty protocol calls into wezterm cli commands"

[[bin]]
name = "wrightty-bridge-wezterm"
path = "src/main.rs"

[dependencies]
wrightty-protocol = { version = "0.2.0", path = "../wrightty-protocol" }

jsonrpsee = { version = "0.24", features = ["server"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
