[package]
name = "wrightty-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust client SDK for the Wrightty terminal automation protocol"

[dependencies]
wrightty-protocol = { version = "0.1.1", path = "../wrightty-protocol" }
jsonrpsee = { version = "0.24", features = ["ws-client"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
