[package]
name = "wrightty-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Protocol types for the Wrightty terminal automation protocol"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
