[package]
name = "wrightty-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebSocket JSON-RPC daemon for Wrightty"

[dependencies]
wrightty-protocol = { path = "../wrightty-protocol" }
wrightty-core = { path = "../wrightty-core" }

jsonrpsee = { version = "0.24", features = ["server"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
