[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wrightty"
version = "0.1.0"
description = "Python SDK for the Wrightty terminal automation protocol"
requires-python = ">=3.10"
dependencies = [
    "websockets>=12.0",
]

[project.optional-dependencies]
cli = ["click>=8.0"]
mcp = ["mcp>=1.0"]

[project.scripts]
wrightty = "wrightty.cli:main"

[project.entry-points."mcp.servers"]
wrightty = "wrightty.mcp_server:serve"
